--- a/image/style.css
+++ b/image/style.css
@@ -4,10 +4,11 @@ body {
   background-color: yellow;
 }
 
-.profile-container {
+#profile-container {
   max-width: 300px;
-  background-color: red;
-  border: 1px solid black;
+  margin: 80px auto;
+  background-color: white;
+  border: 1px solid gray;
   border-radius: 6px;
 }
 
