--- a/image/style.css
+++ b/image/style.css
@@ -12,6 +12,16 @@ body {
   border-radius: 6px;
 }
 
+#footer {
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  line-height: 50px;
+  background-color: burlywood;
+  text-align: center;
+  color: white;
+}
 .profile-image {
   width: 50%;
   height: auto;
