--- a/image/style.css
+++ b/image/style.css
@@ -4,6 +4,10 @@ body {
   background-color: yellow;
 }
 
+#profile-job {
+  text-align: center;
+}
+
 #profile-container {
   max-width: 300px;
   margin: 80px auto;
